# kmcl

./: .gitignore  Cargo.toml  README.md
locales/: en.yml  ja-JP-biyo-n.yml  ja-JP-by.yml  ja-JP.yml
src/: instance.rs  main.rs  tui.rs
src/instance/: mod.rs
src/tui/: mod.rs
