[package]
name = "kmcl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "=0.20.0", default-features = false, features = ["crossterm-backend"] }
dunce = "=1.0.3"
once_cell = "=1.17.0"
open = "=3.2.0"
rust-i18n = "=1.1.1"
serde = "=1.0.152"
serde_derive = "=1.0.152"
indoc = "=2.0.0"
toml = "=0.7.0"
